@@ -1,5 +1,5 @@
 /*
-    Copyright 1999-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1999-2011, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -223,11 +223,11 @@ fostlib::url::url()
 : protocol( "http" ), server( host(s_default_host.value()) ), m_pathspec( "/" ) {
 }
 fostlib::url::url( const url& url, const filepath_string &path )
-: protocol( "http" ), server( url.server() ), m_pathspec( "/" ) {
+: protocol( url.protocol() ), server( url.server() ), m_pathspec( "/" ) {
     pathspec( path );
 }
 fostlib::url::url( const url& url, const boost::filesystem::wpath &path )
-: protocol( "http" ), server( url.server() ), m_pathspec( "/" ) {
+: protocol( url.protocol() ), server( url.server() ), m_pathspec( "/" ) {
     pathspec( coerce< filepath_string >( path ) );
 }
 fostlib::url::url( const t_form form, const string &str )
